# Templator

./: LICENSE  README.md  pyproject.toml
src/templator/: cli.py  commands.py  compiler.py  linker.py
tests/: test_compiler.py
tests/templates/: index.html  index_alt.html
tests/templates/containers/: container.part.html
tests/templates/partials/: footer.part.html  header.part.html
